ingress-controller/app-01-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1-deploy
  namespace: app 
spec:
  selector:
    matchLabels:
      app: webapp1
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp1
    spec:
      containers:
      - name: webapp1
        image: houssemdocker/angularapp-docker-ci-npm-nginx:546
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: webapp1-svc
  namespace: app
spec:
  selector:
    app: webapp1
  ports:
  - port: 80
  type: LoadBalancer # NodePort #
