ingress-controller/app-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: webapp1-svc
          servicePort: 80
        path: /webapp1(/|$)(.*)
      - backend:
          serviceName: webapp2-svc
          servicePort: 80
        path: /webapp2(/|$)(.*)
  - host: frontend.13.83.6.1.nip.io # change the IP address here
    http:
      paths:
      - backend:
          serviceName: webapp1-svc
          servicePort: 80
        path: /webapp1
  - host: amazon.13.83.6.1.nip.io # change the IP address here
    http:
      paths:
      - backend:
          serviceName: webapp2-svc
          servicePort: 80
        path: /webapp2
  - host: windios.13.83.6.1.nip.io # change the IP address here
    http:
      paths:
      - backend:
          serviceName: sample
          servicePort: 80
        path: /
  - host: test.13.83.6.1.nip.io # change the IP address here
    http:
      paths:
      - backend:
          serviceName: aks-helloworld
          servicePort: 80
        path: /(.*)
  - host: test2.13.83.6.1.nip.io # change the IP address here
    http:
      paths:
      - backend:
          serviceName: ingress-demo
          servicePort: 80
        path: /hello-world-two(/|$)(.*)
